# hardwood

./: LICENSE  README.md  hardwood.cabal  stack.yaml  telnet.cabal
app/: Main.hs
src/: Hardwood.hs  Telnet.hs
src/Hardwood/: Network.hs  Parser.hs  UI.hs
src/Telnet/: Parser.hs
test/: ParserSpec.hs
