name:                hardwood
version:             0.1.0.0
synopsis:            mud client
description:         Please see README.md
homepage:            http://github.com/narrative/hardwood#readme
license:             BSD3
license-file:        LICENSE
author:              erik stevenson
maintainer:          eriknstevenson@gmail.com
copyright:           2015 erik stevenson
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Hardwood
                     , Hardwood.Parser
  build-depends:       base >= 4.7 && < 5
                     , ansi-terminal
                     , bytestring
                     , attoparsec
  default-language:    Haskell2010

executable hardwood-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hardwood
  default-language:    Haskell2010

test-suite hardwood-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hardwood
                     , ansi-terminal
                     , attoparsec
                     , bytestring
                     , hspec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/narrative/hardwood
